Fixing nav and home button position Improving compability with Safari : texture visible when scrolling out of the page Making link in Polypapier open in a new tab Reducing the use of eval() as a better practice

--- a/background_texture.css
+++ b/background_texture.css
@@ -1,12 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 
-#background_texture {
+body {
 	background-image: url("grain.png");
 	z-index: 0;
+/*
 	width: 1920px;
 	height: 1080px;
 	position: absolute;
 	top: 0px;
 	left: 0px;
+*/
 }
